[package]
name = "password-manager-cs128h"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
rusqlite = "0.29.0"
rust-crypto = "0.2.36"
aes-gcm = "0.10.0"
rand = "0.8.5"
base64 = "0.21.0"
addr = "0.15.6"
csv = "1.3.1"
linked-hash-map = "0.5.6"
clipboard = "0.5.0"


[[bin]]
name = "password-manager-cs128h"
path = "./src/main.rs"
